# pdf2json

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: run_json_restructure.py  run_pdf_to_text.py
text_processing/: json_structure.py  pdf_to_text.py
